# gpu_transcriber

./: .gitignore  LICENSE.md  README.md  pyproject.toml
gpu_transcriber_app/: README.md  cli.py  config.py  transcriber.py
gpu_transcriber_app/components/: audio.py  engine.py  subtitles.py  utils.py  video.py
